Moved Dante blurb and made it a quotation of his.

--- a/css/sass/_chapter2.sass
+++ b/css/sass/_chapter2.sass
@@ -264,7 +264,11 @@
     @extend .border-top
     @extend .border-bottom
 
-  .dante_chinni
+  .quotation.dante_chinni
+    @extend .right
+    @extend .blend
+
+  .video.dante_chinni
     @extend .video.full
 
     .intro
