Added headings to gender section.

--- a/css/sass/_chapter2.sass
+++ b/css/sass/_chapter2.sass
@@ -78,8 +78,16 @@
       section
         background: rgba(255, 255, 255, .8)
 
-        &.copy p
-          margin: $line
+        &.copy
+          p
+            margin: $line
+
+          h3
+            color: $green
+            font-family: $proxima-bold
+            font-size: 20px
+            margin: $line 0 -0.5em $line
+            text-transform: uppercase
 
   .gender_split
     background: transparent image-url('line-background.png') center top repeat-y
